--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ add_subdirectory(libs/DeployUtils_Core)
 add_subdirectory(libs/Translation_Core)
 add_subdirectory(libs/Translation_Widgets)
 add_subdirectory(libs/QueryExpression_Core)
+add_subdirectory(libs/QueryExpression_Sql)
 add_subdirectory(libs/Sql_Core)
 add_subdirectory(libs/Sql_Widgets)
 add_subdirectory(libs/Entity_Core)
