--- a/libs/QueryExpression_Core/src/CMakeLists.txt
+++ b/libs/QueryExpression_Core/src/CMakeLists.txt
@@ -25,6 +25,8 @@ set(SOURCE_FILES
   Mdt/QueryExpression/BuildExpressionTree/AddExpressionToTree.cpp
   Mdt/QueryExpression/BuildExpressionTree/Transform.cpp
   Mdt/QueryExpression/FilterExpression.cpp
+  Mdt/QueryExpression/SelectStatement.cpp
+  Mdt/QueryExpression/AbstractSelectQuery.cpp
   Mdt/QueryExpression/SelectQuery.cpp
 )
 
@@ -44,7 +46,7 @@ mdt_add_library(
   NAME QueryExpression_Core
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES Algorithm Qt5::Core;
+  LINK_DEPENDENCIES Algorithm Error_Core Qt5::Core;
 )
 target_compile_definitions(QueryExpression_Core PRIVATE QT_NO_CAST_FROM_ASCII QT_NO_CAST_TO_ASCII QT_NO_CAST_FROM_BYTEARRAY)
 
