QueryExpression: work on SQL SelectQuery

--- a/libs/QueryExpression_Sql/src/CMakeLists.txt
+++ b/libs/QueryExpression_Sql/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 # List of source files
 set(SOURCE_FILES
+  Mdt/QueryExpression/SqlTransform.cpp
   Mdt/QueryExpression/SqlSelectQuery.cpp
 )
 
@@ -10,7 +11,7 @@ mdt_add_library(
   NAME QueryExpression_Sql
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES QueryExpression_Core Sql_Core Qt5::Core Qt5::Sql;
+  LINK_DEPENDENCIES QueryExpression_Core Algorithm Sql_Core Qt5::Core Qt5::Sql;
 )
 target_compile_definitions(QueryExpression_Sql PRIVATE QT_NO_CAST_FROM_ASCII QT_NO_CAST_TO_ASCII QT_NO_CAST_FROM_BYTEARRAY)
 
