--- a/libs/QueryExpression_Sql/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Sql/tests/CMakeLists.txt
@@ -26,4 +26,5 @@ endfunction()
 
 #================= Tests ====================
 
+addQueryExpression_SqlTest("SqlTransformTest")
 addQueryExpression_SqlTest("SelectQueryTest")
