--- a/libs/QueryExpression_Sql/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Sql/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(Qt5 COMPONENTS Test)
 
 set(SOURCE_FILES
   src/TestBase.cpp
+  src/SelectQueryTestBase.cpp
 )
 
 add_library(mdtQueryExpression_SqlTest SHARED ${SOURCE_FILES})
@@ -28,3 +29,4 @@ endfunction()
 
 addQueryExpression_SqlTest("SqlTransformTest")
 addQueryExpression_SqlTest("SelectQueryTest")
+addQueryExpression_SqlTest("CachedSelectQueryTest")
