QueryExpression: create SelectQueryFactory

--- a/libs/QueryExpression_Core/src/CMakeLists.txt
+++ b/libs/QueryExpression_Core/src/CMakeLists.txt
@@ -28,6 +28,8 @@ set(SOURCE_FILES
   Mdt/QueryExpression/SelectStatement.cpp
   Mdt/QueryExpression/AbstractSelectQuery.cpp
   Mdt/QueryExpression/SelectQuery.cpp
+  Mdt/QueryExpression/AbstractSelectQueryFactory.cpp
+  Mdt/QueryExpression/SelectQueryFactory.cpp
   Mdt/QueryExpression/CachedSelectQuery.cpp
 )
 
