--- a/libs/Entity_Sql/tests/CMakeLists.txt
+++ b/libs/Entity_Sql/tests/CMakeLists.txt
@@ -32,3 +32,4 @@ addEntity_SqlTest("ForeignKeyTest")
 addEntity_SqlTest("TableTest")
 addEntity_SqlTest("SelectStatementTest")
 addEntity_SqlTest("DataTest")
+addEntity_SqlTest("EntityRepositoryTest")
