--- a/libs/Container/tests/CMakeLists.txt
+++ b/libs/Container/tests/CMakeLists.txt
@@ -32,3 +32,4 @@ addContainerTest("StlContainerIteratorAdapterTest")
 addContainerTest("RowColumnListTest")
 addContainerTest("TableCacheOperationTest")
 addContainerTest("TableCacheTest")
+addContainerTest("VariantRecordTest")
