--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -54,6 +54,7 @@ addSqlCoreTest("ExpressionTest")
 # addSqlCoreTest("FromClauseTest")
 addSqlCoreTest("SelectStatementTest")
 addSqlCoreTest("QueryTest")
+addSqlCoreTest("AsyncQueryTest")
 addSqlCoreTest("SQLiteDatabaseTest")
 addSqlCoreTest("SchemaFieldTypeMapTest")
 addSqlCoreTest("SchemaFieldTest")
