--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -54,6 +54,7 @@ addSqlCoreTest("ExpressionTest")
 # addSqlCoreTest("JoinClauseTest")
 # addSqlCoreTest("FromClauseTest")
 addSqlCoreTest("SelectStatementTest")
+addSqlCoreTest("ConnectionParametersTest")
 addSqlCoreTest("QueryTest")
 addSqlCoreTest("AsyncQueryTest")
 addSqlCoreTest("AsyncQueryBenchmark")
