QueryExpression SelectStatement: add fieldIndex()

--- a/libs/QueryExpression_Core/tests/CMakeLists.txt
+++ b/libs/QueryExpression_Core/tests/CMakeLists.txt
@@ -29,6 +29,7 @@ endfunction()
 addQueryExpression_CoreTest("ExpressionGrammarTest")
 addQueryExpression_CoreTest("JoinClauseTest")
 addQueryExpression_CoreTest("SelectStatementTest")
+addQueryExpression_CoreTest("SelectStatementBenchmark")
 addQueryExpression_CoreTest("SelectQueryTest")
 addQueryExpression_CoreTest("SelectFieldTest")
 addQueryExpression_CoreTest("SelectFieldListTest")
