--- a/libs/Container/tests/CMakeLists.txt
+++ b/libs/Container/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ addContainerTest("StlContainerIteratorAdapterTest")
 addContainerTest("VectorTest")
 addContainerTest("VectorBenchmark")
 addContainerTest("RowColumnListTest")
+addContainerTest("TableCacheTaskTest")
 addContainerTest("TableCacheOperationTest")
 addContainerTest("TableCacheTest")
 addContainerTest("VariantRecordTest")
