Move Assert from Error -> Assert lib

--- a/libs/Assert/tests/CMakeLists.txt
+++ b/libs/Assert/tests/CMakeLists.txt
@@ -5,17 +5,15 @@ find_package(Qt5 COMPONENTS Test)
 
 #=============== Helper functions ===========
 
-function(addErrorCoreTest testName)
-  set(complteTestName "MdtError_${testName}")
+function(addAssertTest testName)
+  set(complteTestName "MdtAssert_${testName}")
   set(sourceFilePath "src/${testName}.cpp")
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
-  target_link_libraries(${executableName} Error_Core Qt5::Test)
+  target_link_libraries(${executableName} Assert Qt5::Test)
   add_test(NAME ${complteTestName} COMMAND ${executableName})
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
 # Tests
-addErrorCoreTest("ErrorTest")
-addErrorCoreTest("FileBackendTest")
-addErrorCoreTest("ErrorLoggerTest")
+addAssertTest("AssertTest")
