Numeric: import ItegralUniqueIdTemplate from Entity

--- a/libs/Numeric/src/CMakeLists.txt
+++ b/libs/Numeric/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE_FILES
   Mdt/Numeric/Resistance.cpp
   Mdt/Numeric/Length.cpp
   Mdt/Numeric/IntegralRange.cpp
+  Mdt/Numeric/IntegralUniqueIdTemplate.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
