--- a/libs/Numeric/tests/CMakeLists.txt
+++ b/libs/Numeric/tests/CMakeLists.txt
@@ -31,3 +31,4 @@ addNumericTest("DoubleTest")
 addNumericTest("PhysicsTypesTest")
 addNumericTest("IntegralRangeTest")
 addNumericTest("IntegralRangeBenchmark")
+addNumericTest("IntegralUniqueIdTest")
