--- a/libs/Reflection_Core/tests/CMakeLists.txt
+++ b/libs/Reflection_Core/tests/CMakeLists.txt
@@ -27,3 +27,5 @@ endfunction()
 #================= Tests ====================
 
 addReflection_CoreTest("Sandbox")
+addReflection_CoreTest("FieldAttributesTest")
+addReflection_CoreTest("PrimaryKeyTest")
