Reflection: implement FieldAlgorithm

--- a/libs/Reflection_Core/tests/CMakeLists.txt
+++ b/libs/Reflection_Core/tests/CMakeLists.txt
@@ -28,4 +28,5 @@ endfunction()
 
 addReflection_CoreTest("Sandbox")
 addReflection_CoreTest("FieldAttributesTest")
+addReflection_CoreTest("FieldTest")
 addReflection_CoreTest("PrimaryKeyTest")
