--- a/libs/Reflection_Core/src/CMakeLists.txt
+++ b/libs/Reflection_Core/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE_FILES
   Mdt/Reflection/FieldFlags.cpp
   Mdt/Reflection/FieldMaxLength.cpp
   Mdt/Reflection/FieldAttributes.cpp
+  Mdt/Reflection/FieldAlgorithm.cpp
   Mdt/Reflection/PrimaryKey.cpp
   Mdt/Reflection/IdPrimaryKey.cpp
   Mdt/Reflection/AutoIncrementIdPrimaryKey.cpp
