--- a/libs/Reflection_Core/tests/CMakeLists.txt
+++ b/libs/Reflection_Core/tests/CMakeLists.txt
@@ -27,6 +27,10 @@ endfunction()
 #================= Tests ====================
 
 addReflection_CoreTest("Sandbox")
+
+addReflection_CoreTest("ReflectFieldTest")
+addReflection_CoreTest("ReflectStructTest")
 addReflection_CoreTest("FieldAttributesTest")
 addReflection_CoreTest("FieldTest")
+addReflection_CoreTest("StructTest")
 addReflection_CoreTest("PrimaryKeyTest")
