Sql: import MySQL schema driver from experimental

--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -115,6 +115,6 @@ addSqlCoreTest("SchemaTableBenchmark")
 # addSqlCoreTest("SchemaTest")
 addSqlCoreTest("SchemaDriverTest")
 addSqlCoreTest("SchemaDriverSqliteTest")
-# addSqlCoreTest("SchemaDriverMySqlTest")
+addSqlCoreTest("SchemaDriverMySqlTest")
 # addSqlCoreTest("SchemaDriverPostgreSqlTest")
 # addSqlCoreTest("SchemaViewTest")
