Sql: import PostgreSQL schema driver from experimental

--- a/libs/Sql_Core/src/CMakeLists.txt
+++ b/libs/Sql_Core/src/CMakeLists.txt
@@ -51,7 +51,7 @@ set(SOURCE_FILES
     Mdt/Sql/Schema/DriverImplementationInterface.cpp
     Mdt/Sql/Schema/DriverSQLite.cpp
     Mdt/Sql/Schema/DriverMySql.cpp
-#     Mdt/Sql/Schema/DriverPostgreSQL.cpp
+    Mdt/Sql/Schema/DriverPostgreSQL.cpp
     Mdt/Sql/Schema/FieldLength.cpp
     Mdt/Sql/Schema/FieldTypeFlags.cpp
     Mdt/Sql/Schema/FieldList.cpp
