--- a/libs/Sql_Core/tests/CMakeLists.txt
+++ b/libs/Sql_Core/tests/CMakeLists.txt
@@ -116,5 +116,5 @@ addSqlCoreTest("SchemaTableBenchmark")
 addSqlCoreTest("SchemaDriverTest")
 addSqlCoreTest("SchemaDriverSqliteTest")
 addSqlCoreTest("SchemaDriverMySqlTest")
-# addSqlCoreTest("SchemaDriverPostgreSqlTest")
+addSqlCoreTest("SchemaDriverPostgreSqlTest")
 # addSqlCoreTest("SchemaViewTest")
