Sql Schema: implement table from reflected

--- a/libs/Sql_Reflection/src/CMakeLists.txt
+++ b/libs/Sql_Reflection/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 # List of source files
 set(SOURCE_FILES
+  Mdt/Sql/Schema/Reflection/FieldAlgorithm.cpp
+  Mdt/Sql/Schema/Reflection/PrimaryKeyAlgorithm.cpp
+  Mdt/Sql/Schema/Reflection/TableAlgorithm.cpp
   Mdt/Sql/Schema/Reflection.cpp
 )
 
