--- a/libs/Reflection_Core/tests/CMakeLists.txt
+++ b/libs/Reflection_Core/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ function(addReflection_CoreTest testName)
   add_executable(${executableName} ${sourceFilePath})
   target_link_libraries(${executableName} mdtReflection_CoreTest)
   add_test(NAME ${complteTestName} COMMAND ${executableName})
+  target_compile_definitions(${executableName} PRIVATE QT_NO_CAST_FROM_ASCII QT_NO_CAST_TO_ASCII QT_NO_CAST_FROM_BYTEARRAY)
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
@@ -35,3 +36,4 @@ addReflection_CoreTest("FieldAttributesTest")
 addReflection_CoreTest("FieldTest")
 addReflection_CoreTest("StructTest")
 addReflection_CoreTest("PrimaryKeyTest")
+addReflection_CoreTest("UniqueConstraintTest")
