Sql Schema Reflection: implement UniqueIndex + compile tests with not ascii cast

--- a/libs/Sql_Reflection/tests/CMakeLists.txt
+++ b/libs/Sql_Reflection/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ function(addSql_ReflectionTest testName)
   add_executable(${executableName} ${sourceFilePath})
   target_link_libraries(${executableName} mdtSql_ReflectionTest)
   add_test(NAME ${complteTestName} COMMAND ${executableName})
+  target_compile_definitions(${executableName} PRIVATE QT_NO_CAST_FROM_ASCII QT_NO_CAST_TO_ASCII QT_NO_CAST_FROM_BYTEARRAY)
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
@@ -29,4 +30,5 @@ endfunction()
 addSql_ReflectionTest("SchemaFieldTest")
 addSql_ReflectionTest("SchemaPrimaryKeyTest")
 addSql_ReflectionTest("SchemaTableTest")
+addSql_ReflectionTest("SchemaUniqueIndexTest")
 addSql_ReflectionTest("ReflectionTest")
